--- a/WebApplication1/Views/ShowAllProducts/Index.cshtml
+++ b/WebApplication1/Views/ShowAllProducts/Index.cshtml
@@ -116,7 +116,7 @@
     {
          <div class="col-4" style="margin-bottom:15px;">
              <div class="card md-4">
-                 <div class="card-header">
+                 <div class="card-header h-100">
                      <h4 class="my-0 font-weight-normal">
                          <label style="font-size:23px;color:steelblue">@item.Name</label>
                      </h4>
@@ -130,20 +130,7 @@
                          <a asp-action="Detail" asp-controller="ShowAllProducts" asp-route-id="@item.Id"
                             class="btn pull-right btn-outline-info">View Details</a>
                      </div>
-                     <div class="m-md-auto">
-                         <fieldset class="rating">
-                             <input type="radio" id="star5" name="rating1" value="5" /><label class="full" for="star5" title="Awesome - 5 stars"></label>
-                             <input type="radio" id="star4half" name="rating1" value="4 and a half" /><label class="half" for="star4half" title="Pretty good - 4.5 stars"></label>
-                             <input type="radio" id="star4" name="rating1" value="4" /><label class="full" for="star4" title="Pretty good - 4 stars"></label>
-                             <input type="radio" id="star3half" name="rating1" value="3 and a half" /><label class="half" for="star3half" title="Meh - 3.5 stars"></label>
-                             <input type="radio" id="star3" name="rating1" value="3" /><label class="full" for="star3" title="Meh - 3 stars"></label>
-                             <input type="radio" id="star2half" name="rating1" value="2 and a half" /><label class="half" for="star2half" title="Kinda bad - 2.5 stars"></label>
-                             <input type="radio" id="star2" name="rating1" value="2" /><label class="full" for="star2" title="Kinda bad - 2 stars"></label>
-                             <input type="radio" id="star1half" name="rating1" value="1 and a half" /><label class="half" for="star1half" title="Meh - 1.5 stars"></label>
-                             <input type="radio" id="star1" name="rating1" value="1" /><label class="full" for="star1" title="Sucks big time - 1 star"></label>
-                             <input type="radio" id="starhalf" name="rating1" value="half" /><label class="half" for="starhalf" title="Sucks big time - 0.5 stars"></label>
-                         </fieldset>
-                     </div>
+                    
                  </div>
              </div>
          </div>
