--- a/WebApplication1/Areas/Identity/Pages/Account/Register.cshtml
+++ b/WebApplication1/Areas/Identity/Pages/Account/Register.cshtml
@@ -85,7 +85,7 @@
                                             </div>
                                             <div class="col-sm-6">
                                                 <label asp-for="Input.ConfirmPassword"></label>
-                                                <input asp-for="Input.ConfirmPassword" type="text" class="form-control form-control-user"
+                                                <input asp-for="Input.ConfirmPassword" type="password" class="form-control form-control-user"
                                                        placeholder="Repeat Password">
 
                                                 <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
@@ -94,7 +94,7 @@
                                         <div class="form-group row">
                                             <div class="col-sm-12">
                                                 <label asp-for="Input.PhoneNumber"></label>
-                                                <input asp-for="Input.PhoneNumber" type="password" class="form-control form-control-user"
+                                                <input asp-for="Input.PhoneNumber" type="text" class="form-control form-control-user"
                                                        placeholder="Phone">
 
                                                 <span asp-validation-for="Input.PhoneNumber" class="text-danger"></span>
