--- a/WebApplication1/Views/Shared/_LoginPartial.cshtml
+++ b/WebApplication1/Views/Shared/_LoginPartial.cshtml
@@ -15,7 +15,7 @@
 }
 else
 {   <div class="d-inline ">
-    <a class="btn btn-success" asp-area="Identity" asp-page="/Account/Register">سجل الان</a>
+    <a style="background-color: darkcyan; color: white;" class="btn" asp-area="Identity" asp-page="/Account/Register">سجل الان</a>
     </div>
     <div class="d-inline ">
         <a class="btn btn-success" asp-area="Identity" asp-page="/Account/Login">تسجيل الدخول</a>
