--- a/WebApplication1/Views/UserHome/UserHome.cshtml
+++ b/WebApplication1/Views/UserHome/UserHome.cshtml
@@ -102,7 +102,7 @@
         </div>
 
     </nav>-->
-    <!-- Navbar -->
+    <!-- Navbar --><br /> <br /><br />
     <h2 class="title">أحدث الاضافات  </h2>
     <div class="container">
         <section class="text-center mb-4">
