--- a/WebApplication1/Areas/Identity/Pages/Account/Login.cshtml
+++ b/WebApplication1/Areas/Identity/Pages/Account/Login.cshtml
@@ -75,18 +75,40 @@
                                         </div>
 
                                         <button type="submit" class="btn btn-success btn-user btn-block">Login</button>
-                                        <hr>
-                                        <a href="index.html" class="btn btn-google btn-user btn-block">
-                                            <i class="fab fa-google fa-fw"></i> Login with Google
-                                        </a>
-                                        <a href="index.html" class="btn btn-facebook btn-user btn-block">
-                                            <i class="fab fa-facebook-f fa-fw"></i> Login with Facebook
-                                        </a>
                                     </form>
+                                        <hr>
+                                    @{
+                                        if ((Model.ExternalLogins?.Count ?? 0) == 0)
+                                        {
+                                            <div>
+                                                <p>
+                                                    There are no external authentication services configured. See <a href="https://go.microsoft.com/fwlink/?LinkID=532715">this article</a>
+                                                    for details on setting up this ASP.NET application to support logging in via external services.
+                                                </p>
+                                            </div>
+                                        }
+                                        else
+                                        {
+                                            <form id="external-account" asp-page="./ExternalLogin" asp-route-returnUrl="@Model.ReturnUrl" method="post" class="form-horizontal">
+                                                <div>
+                                                    <p>
+                                                        @foreach (var provider in Model.ExternalLogins)
+                                                        {
+                                                            <button type="submit" class="btn btn-google btn-user btn-block" name="provider" value="@provider.Name" title="Log in using your @provider.DisplayName account"><i class="fab fa-google fa-fw"></i> @provider.DisplayName</button>
+                                                        }
+                                                    </p>
+                                                </div>
+                                            </form>
+                                        }
+                                    }
+                                    @*<a href="index.html" class="btn btn-google btn-user btn-block">
+                                        <i class="fab fa-google fa-fw"></i> Login with Google
+                                    </a>*@
+
                                     <hr>
-                                    <div class="text-center">
+                                    @*<div class="text-center">
                                         <a class="small" asp-page="./ForgotPassword">Forgot Password?</a>
-                                    </div>
+                                    </div>*@
 
 
 
@@ -104,6 +126,10 @@
 
         </div>
         <section>
+            
+           
+        </section>
+        @*<section>
             <h4>Use another service to log in.</h4>
             <hr />
             @{
@@ -130,7 +156,7 @@
                     </form>
                 }
             }
-        </section>
+        </section>*@
 
     </div>
 
