--- a/WebApplication1/Areas/Identity/Pages/Account/Register.cshtml
+++ b/WebApplication1/Areas/Identity/Pages/Account/Register.cshtml
@@ -106,13 +106,34 @@
 
                                         <button type="submit" class="btn btn-success btn-user btn-block">Register Account</button>
                                         <hr>
-                                        <a href="index.html" class="btn btn-google btn-user btn-block">
-                                            <i class="fab fa-google fa-fw"></i> Register with Google
-                                        </a>
-                                        <a href="index.html" class="btn btn-facebook btn-user btn-block">
-                                            <i class="fab fa-facebook-f fa-fw"></i> Register with Facebook
-                                        </a>
                                     </form>
+
+                                    @{
+                                        if ((Model.ExternalLogins?.Count ?? 0) == 0)
+                                        {
+                                            <div>
+                                                <p>
+                                                    There are no external authentication services configured. See <a href="https://go.microsoft.com/fwlink/?LinkID=532715">this article</a>
+                                                    for details on setting up this ASP.NET application to support logging in via external services.
+                                                </p>
+                                            </div>
+                                        }
+                                        else
+                                        {
+                                            <form id="external-account" asp-page="./ExternalLogin" asp-route-returnUrl="@Model.ReturnUrl" method="post" class="form-horizontal">
+                                                <div>
+                                                    <p>
+                                                        @foreach (var provider in Model.ExternalLogins)
+                                                        {
+                                                            <button type="submit" class="btn btn-google btn-user btn-block" name="provider" value="@provider.Name" title="Log in using your @provider.DisplayName account"><i class="fab fa-google fa-fw"></i> @provider.DisplayName</button>
+                                                        }
+                                                    </p>
+                                                </div>
+                                            </form>
+                                        }
+                                    }
+
+
                                     <hr>
 
                                     <div class="text-center">
@@ -125,7 +146,7 @@
                 </div>
             </div>
         </div>
-        <section>
+        @*<section>
             <h4>Use another service to register.</h4>
             <hr />
             @{
@@ -153,7 +174,7 @@
                 }
             }
         </section>
-    </div>
+    </div>*@
 
 
 
