--- a/WebApplication1/Views/Shared/_Layout.cshtml
+++ b/WebApplication1/Views/Shared/_Layout.cshtml
@@ -18,7 +18,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - WebApplication1</title>
+    <title> Mazahem</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="/css/style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -46,7 +46,18 @@
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
     <script src="https://kit.fontawesome.com/6128d2f3dd.js" crossorigin="anonymous"></script>
 
+    <style>
+        .dropdown a  {
+            font-family: 'Almarai', sans-serif;
+            color:black;
+        }
+        .dropdown a:hover {
+            text-decoration: none;
+            font-family: 'Almarai', sans-serif;
+            color: #21d192 !important; 
+        }
 
+    </style>
     @*<link rel="stylesheet" href="~/css/styleHome.css" />*@
 </head>
 <body>
@@ -80,7 +91,7 @@
                     </div>
                 </div>
             </nav>*@
-        <nav>
+        <nav >
             <div style="background-color: #21d192;">
                 <div class="container">
 
@@ -96,94 +107,94 @@
         <main>
             <div class="d-flex justify-content-center" style="margin: 25px;">
                 <div class="d-inline mr-5">
-                   
+
                     <partial name="_LoginPartial" />
 
                 </div>
-                <form asp-action="search_header" asp-controller="ShowAllProducts" method="post"  >
+                <form autocomplete="on" asp-action="search_header" asp-controller="ShowAllProducts" method="post">
                     <div class="input-group" style="width: 500px;">
                         <button type="submit" class="d-inline btn btn-outline-success">البحث</button>
-                        <input autocomplete="on" type="search" class="form-control rounded" aria-label="Search"
+                        <input name="str" type="search" class="form-control rounded" aria-label="Search"
                                aria-describedby="search-addon" style="text-align: right;" />
                     </div>
                 </form>
-                
 
 
-                <div><a style="text-decoration:none;" asp-area="" asp-controller="Admin_Goods" asp-action="Index"><h3 style=" margin-left: 190px;font-family: 'Almarai', sans-serif;">المزاحم</h3></a></div>
+
+                <div><a style="text-decoration:none;" asp-area="" asp-controller="UserHome" asp-action="UserHome"><h3 style=" margin-left: 190px;font-family: 'Almarai', sans-serif;">المزاحم</h3></a></div>
             </div>
-            <!-- Navbar -->
+            <!-- Navbar --><br />
             <nav style="background-color: rgb(236, 234, 234);">
                 <div class="d-flex justify-content-center">
                     @* ============== card ============= *@
-                    <a class="text-dark dropdown float-left" asp-area="" asp-controller="ShowAllProducts" asp-action="Cart">
-                        <i class="fas fa-shopping-cart"></i>
+                    <a class="text-success dropdown float-left" asp-area="" asp-controller="ShowAllProducts" asp-action="Cart">
+                        <i class=" fas fa-shopping-cart"></i>
                         (@count)
                     </a>
                     @* ============== chat ============= *@
 
-                    <a class="text-dark dropdown float-left" asp-area="" asp-controller="Chat" asp-action="Index">
+                    <a class=" dropdown float-left" asp-area="" asp-controller="Chat" asp-action="Index">
                         <i class='far fa-comment-dots' style='font-size:24px'></i>
                     </a>
 
 
 
-                    <div class="dropdown d-inline ">
-                        <a asp-area="" asp-controller="cat" asp-action="sebaka" class="dropdown-toggle text-dark" data-toggle="dropdown">سباكة</a>
-                        <div class="dropdown-menu">
-                            <a asp-area="" asp-controller="catg" asp-action="sebaka" class="dropdown-item">مواسير صرف صحي </a>
-                            <a asp-area="" asp-controller="catg" asp-action="sebaka" class="dropdown-item">مواسير</a>
-                        </div>
+                    <div class=" dropdown d-inline ">
+                        <a asp-area="" asp-controller="catg" asp-action="sebaka">سباكة</a>
+                        @*<div class="dropdown-menu">
+                                <a asp-area="" asp-controller="catg" asp-action="sebaka" class="dropdown-item">مواسير صرف صحي </a>
+                                <a asp-area="" asp-controller="catg" asp-action="sebaka" class="dropdown-item">مواسير</a>
+                            </div>*@
                     </div>
                     <div class="dropdown d-inline">
-                        <a asp-area="" asp-controller="catg" asp-action="acc" class="dropdown-toggle text-dark" data-toggle="dropdown">اكسسوارات</a>
-                        <div class="dropdown-menu">
-                            <a asp-area="" asp-controller="catg" asp-action="acc" class="dropdown-item">حنفيات</a>
-                            <a asp-area="" asp-controller="catg" asp-action="acc" class="dropdown-item"> محابس</a>
-                            <a asp-area="" asp-controller="catg" asp-action="acc" class="dropdown-item"> وصلات</a>
-                            <a asp-area="" asp-controller="catg" asp-action="acc" class="dropdown-item"> أنظمة حريق</a>
-                        </div>
+                        <a asp-area="" asp-controller="catg" asp-action="acc">اكسسوارات</a>
+                        @*<div class="dropdown-menu">
+                                <a asp-area="" asp-controller="catg" asp-action="acc" class="dropdown-item">حنفيات</a>
+                                <a asp-area="" asp-controller="catg" asp-action="acc" class="dropdown-item"> محابس</a>
+                                <a asp-area="" asp-controller="catg" asp-action="acc" class="dropdown-item"> وصلات</a>
+                                <a asp-area="" asp-controller="catg" asp-action="acc" class="dropdown-item"> أنظمة حريق</a>
+                            </div>*@
                     </div>
                     <div class="dropdown d-inline">
-                        <a asp-area="" asp-controller="catg" asp-action="khalat" class="dropdown-toggle text-dark" data-toggle="dropdown">خلاطات مياه</a>
-                        <div class="dropdown-menu">
-                            <a asp-area="" asp-controller="catg" asp-action="khalat" class="dropdown-item">خلاط حوض</a>
-                            <a asp-area="" asp-controller="catg" asp-action="khalat" class="dropdown-item"> خلاط حوض عالي</a>
-                            <a asp-area="" asp-controller="catg" asp-action="khalat" class="dropdown-item"> خلاط بانيو </a>
-                            <a asp-area="" asp-controller="catg" asp-action="khalat" class="dropdown-item"> خلاط مطبخ حائط </a>
-                            <a asp-area="" asp-controller="catg" asp-action="khalat" class="dropdown-item"> خلاط مضبخ حوض </a>
-                            <a asp-area="" asp-controller="catg" asp-action="khalat" class="dropdown-item"> خلاط شطافة  </a>
-                            <a asp-area="" asp-controller="catg" asp-action="khalat" class="dropdown-item"> أطقم خلاطات 3 قطع </a>
-                        </div>
+                        <a asp-area="" asp-controller="catg" asp-action="khalat">خلاطات مياه</a>
+                        @*<div class="dropdown-menu">
+                                <a asp-area="" asp-controller="catg" asp-action="khalat" class="dropdown-item">خلاط حوض</a>
+                                <a asp-area="" asp-controller="catg" asp-action="khalat" class="dropdown-item"> خلاط حوض عالي</a>
+                                <a asp-area="" asp-controller="catg" asp-action="khalat" class="dropdown-item"> خلاط بانيو </a>
+                                <a asp-area="" asp-controller="catg" asp-action="khalat" class="dropdown-item"> خلاط مطبخ حائط </a>
+                                <a asp-area="" asp-controller="catg" asp-action="khalat" class="dropdown-item"> خلاط مضبخ حوض </a>
+                                <a asp-area="" asp-controller="catg" asp-action="khalat" class="dropdown-item"> خلاط شطافة  </a>
+                                <a asp-area="" asp-controller="catg" asp-action="khalat" class="dropdown-item"> أطقم خلاطات 3 قطع </a>
+                            </div>*@
                     </div>
                     <div class="dropdown d-inline">
-                        <a asp-area="" asp-controller="catg" asp-action="marahid" class="dropdown-toggle text-dark" data-toggle="dropdown"> مراحيض و أحواض</a>
-                        <div class="dropdown-menu">
-                            <a asp-area="" asp-controller="catg" asp-action="marahid" class="dropdown-item">مراحيض</a>
-                            <a asp-area="" asp-controller="catg" asp-action="marahid" class="dropdown-item"> مراحيض معلقة</a>
-                            <a asp-area="" asp-controller="catg" asp-action="marahid" class="dropdown-item"> أحواض </a>
-                            <a asp-area="" asp-controller="catg" asp-action="marahid" class="dropdown-item"> أحواض ديكور فوق الرخامة </a>
-                        </div>
+                        <a asp-area="" asp-controller="catg" asp-action="marahid"> مراحيض و أحواض</a>
+                        @*<div class="dropdown-menu">
+                                <a asp-area="" asp-controller="catg" asp-action="marahid" class="dropdown-item">مراحيض</a>
+                                <a asp-area="" asp-controller="catg" asp-action="marahid" class="dropdown-item"> مراحيض معلقة</a>
+                                <a asp-area="" asp-controller="catg" asp-action="marahid" class="dropdown-item"> أحواض </a>
+                                <a asp-area="" asp-controller="catg" asp-action="marahid" class="dropdown-item"> أحواض ديكور فوق الرخامة </a>
+                            </div>*@
                     </div>
                     <div class="dropdown d-inline">
-                        <a asp-area="" asp-controller="catg" asp-action="ahwad" class="dropdown-toggle text-dark" data-toggle="dropdown"> أحواض ستانلس  </a>
-                        <div class="dropdown-menu">
-                            <a asp-area="" asp-controller="catg" asp-action="ahwad" class="dropdown-item">أحواض فرانكي</a>
-                            <a asp-area="" asp-controller="catg" asp-action="ahwad" class="dropdown-item"> أحواض ستانلس تركي</a>
-                            <a asp-area="" asp-controller="catg" asp-action="ahwad" class="dropdown-item"> أحواض ستانلس كورينا كوري</a>
-                        </div>
+                        <a asp-area="" asp-controller="catg" asp-action="ahwad"> أحواض ستانلس  </a>
+                        @*<div class="dropdown-menu">
+                                <a asp-area="" asp-controller="catg" asp-action="ahwad" class="dropdown-item">أحواض فرانكي</a>
+                                <a asp-area="" asp-controller="catg" asp-action="ahwad" class="dropdown-item"> أحواض ستانلس تركي</a>
+                                <a asp-area="" asp-controller="catg" asp-action="ahwad" class="dropdown-item"> أحواض ستانلس كورينا كوري</a>
+                            </div>*@
                     </div>
                     <div class="dropdown d-inline">
-                        <a asp-area="" asp-controller="catg" asp-action="banio" class="dropdown-toggle text-dark" data-toggle="dropdown"> بانيوهات   </a>
-                        <div class="dropdown-menu">
-                            <a asp-area="" asp-controller="catg" asp-action="banio" class="dropdown-item">بانيو جاكوزي </a>
-                            <a asp-area="" asp-controller="catg" asp-action="banio" class="dropdown-item">بانيو دائري وبيضاوي </a>
-                            <a asp-area="" asp-controller="catg" asp-action="banio" class="dropdown-item"> بانيو قدم  </a>
-                            <a asp-area="" asp-controller="catg" asp-action="banio" class="dropdown-item"> بانيو مستطيل   </a>
-                        </div>
+                        <a asp-area="" asp-controller="catg" asp-action="banio"> بانيوهات   </a>
+                        @*<div class="dropdown-menu">
+                                <a asp-area="" asp-controller="catg" asp-action="banio" class="dropdown-item">بانيو جاكوزي </a>
+                                <a asp-area="" asp-controller="catg" asp-action="banio" class="dropdown-item">بانيو دائري وبيضاوي </a>
+                                <a asp-area="" asp-controller="catg" asp-action="banio" class="dropdown-item"> بانيو قدم  </a>
+                                <a asp-area="" asp-controller="catg" asp-action="banio" class="dropdown-item"> بانيو مستطيل   </a>
+                            </div>*@
                     </div>
                     <div class="dropdown d-inline">
-                        <a asp-area="" asp-controller="ShowAllProducts" asp-action="Index" class="text-dark">كل الأصناف</a>
+                        <a asp-area="" asp-controller="ShowAllProducts" asp-action="Index">كل الأصناف</a>
                     </div>
 
                 </div>
@@ -195,8 +206,34 @@
             @RenderBody()
         </main>
     </div>
+    <div class="row">
+
+
+
+        <div class=" col scroll-top " >
+
+            <a href="#" class="top0 mr-0 fa fa-angle-up" style="
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    background-color: #d4f5bd;
+    float: right;
+    text-align: center;
+    padding-top: 5px;
+    text-decoration: none;
+    font-size: 40px;
+    /* position: absolute; */
+    color: lawngreen;
+    /* position: sticky; */
+"></a>
+
+        </div>
+
+
+
+    </div>
     <div class="container-fluid">
-        <footer  class=" page-footer font-small bg-light lighten-5">
+        <footer class=" page-footer font-small bg-light lighten-5">
             <div style="background-color: #21d192;">
                 <div class="container">
                     <div class="row py-4 d-flex align-items-center">
@@ -214,17 +251,18 @@
                         <h6 class="text-uppercase font-weight-bold align-self-center">لينكات</h6>
                         <hr class="teal accent-3 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
                         <p>
-                            <a  id="links" asp-area="" asp-controller="UserHome" asp-action="UserHome" class="dark-grey-text" > الصفحة الرئيسية </a>
+                            <a id="links" asp-area="" asp-controller="UserHome" asp-action="UserHome" class="dark-grey-text"> الصفحة الرئيسية </a>
                         </p>
                         <p>
-                            <a  id="links" asp-area="" asp-controller="ShowAllProducts" asp-action="Index" class="dark-grey-text" >  كل الأصناف</a>
+                            <a id="links" asp-area="" asp-controller="ShowAllProducts" asp-action="Index" class="dark-grey-text">  كل الأصناف</a>
                         </p>
                         <p>
-                            <a id="links" class="dark-grey-text" >الشكاوى والاقتراحات </a>
+                            <a asp-area="" asp-controller="Chat" asp-action="Index" id="links" class="dark-grey-text">الشكاوى والاقتراحات </a>
                         </p>
                         <p>
-                            <a id="links" class="dark-grey-text" >لينك 4</a>
+                            <a asp-area="" asp-controller="Admin_Goods" asp-action="Index" id="links" class="text-danger">أدمن </a>
                         </p>
+
                     </div>
                     <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
                         <h6 id="conthead" class="text-uppercase font-weight-bold">اتصل بنا</h6>
@@ -232,7 +270,7 @@
                             المنيا, مصر   <i class="fas fa-home mr-3"></i>
                         </p>
                         <p id="contfoot">
-                             mazahe@gmail.com
+                            mazahe@gmail.com
                         </p>
                         <p id="contfoot">
                             01015152436   <i class="fas fa-phone mr-3"></i>
@@ -249,34 +287,34 @@
             </div>
 
         </footer>
-        </div>
-        @*<footer class="border-top footer text-muted">
-                <div class="container">
-                    &copy; 2021 - WebApplication1 - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-                </div>
-            </footer>*@
-        <script src="~/lib/jquery/dist/jquery.min.js"></script>
-        <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    </div>
+    @*<footer class="border-top footer text-muted">
+            <div class="container">
+                &copy; 2021 - WebApplication1 - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            </div>
+        </footer>*@
+    <script src="~/lib/jquery/dist/jquery.min.js"></script>
+    <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 
-        @* ---------- Search => website : https://datatables.net/ ---------------- *@
-        <script src="https://cdn.datatables.net/1.10.24/js/jquery.dataTables.min.js"></script>
+    @* ---------- Search => website : https://datatables.net/ ---------------- *@
+    <script src="https://cdn.datatables.net/1.10.24/js/jquery.dataTables.min.js"></script>
 
-        @* ---------- Reports => website : https://datatables.net/ ---------------- *@
-        <script src="https://cdn.datatables.net/buttons/1.7.0/js/dataTables.buttons.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.1.3/jszip.min.js"></script>
-        <script src="https://cdn.datatables.net/buttons/1.5.6/js/buttons.flash.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.53/pdfmake.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.53/vfs_fonts.js"></script>
-        <script src="https://cdn.datatables.net/buttons/1.7.0/js/buttons.html5.min.js"></script>
-        <script src="https://cdn.datatables.net/buttons/1.7.0/js/buttons.print.min.js"></script>
+    @* ---------- Reports => website : https://datatables.net/ ---------------- *@
+    <script src="https://cdn.datatables.net/buttons/1.7.0/js/dataTables.buttons.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.1.3/jszip.min.js"></script>
+    <script src="https://cdn.datatables.net/buttons/1.5.6/js/buttons.flash.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.53/pdfmake.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.53/vfs_fonts.js"></script>
+    <script src="https://cdn.datatables.net/buttons/1.7.0/js/buttons.html5.min.js"></script>
+    <script src="https://cdn.datatables.net/buttons/1.7.0/js/buttons.print.min.js"></script>
 
-        @* ============= *@
-        <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+    @* ============= *@
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 
 
-        <script src="~/js/site.js" asp-append-version="true"></script>
-        <script src="~/js/minicart.js" asp-append-version="true"></script>
-        <script src="~/js/JS.js" asp-append-version="true"></script>
-        @RenderSection("Scripts", required: false)
+    <script src="~/js/site.js" asp-append-version="true"></script>
+    <script src="~/js/minicart.js" asp-append-version="true"></script>
+    <script src="~/js/JS.js" asp-append-version="true"></script>
+    @RenderSection("Scripts", required: false)
 </body>
 </html>
